Try changing directory to find tests